fixed alignment and cleaned up css

--- a/src/index.css
+++ b/src/index.css
@@ -9,47 +9,40 @@ body {
   border-radius: 4px;
 }
 .EditorPageLayout {
-  /*margin-top: 20px;*/
+  box-sizing: border-box;
   display: flex;
   justify-content: flex-start;
-  /*height: 100%;*/
   flex-direction: row;
   flex-wrap: wrap;
 }
 .EditorPageLayout-sideBar {
-  /*box-sizing: border-box;*/
+  box-sizing: border-box;
   flex: 1.5;
 }
 .Editor {
   flex: 5;
   min-width: 70%;
   padding: 10px;
-  /*margin-right: 10px;*/
 }
 .Editor-titleInput {
-  /*box-shadow: 4px 4px 4px 1px #d4d7db;
-  border: 0.75px solid #d4d7db;
-  box-sizing: border-box;
-  border-radius: 4px;*/
+  min-width: 60rem;
   padding: 20px;
   font-size: 26px;
   width: 100%;
-  /*margin-bottom: 10px;*/
+  display: flex;
   border: none;
 }
 input[type="text"] {
-  color: blue;
+  color: #4286f4;
   size: 20px;
 }
 
 .Editor-bodyInput {
-  /*box-shadow: 4px 4px 4px 1px #d4d7db;
-  border: 0.75px solid #d4d7db;*/
   border-radius: 4px;
   border: none;
   padding: 10px;
   font-size: 16px;
-  /*box-sizing: border-box;*/
+  box-sizing: border-box;
   width: 100%;
   margin-bottom: 10px;
   font-family: monospace;
@@ -66,6 +59,9 @@ input[type="text"] {
 }
 .Changed-by-wrapper {
   text-align: right;
+  right: 0;
+  position: absolute;
+  padding-right: 30px;
 }
 .Content-Buttons {
   display: inline;
@@ -74,4 +70,7 @@ input[type="text"] {
 }
 .button.ui.button.Button-Right {
   margin-bottom: 30px;
+}
+.Editor-titleInputWrapper {
+  display: flex;
 }
